tests/sema/err_call_args.diag
err_call_args.ax:2:5: error: return type mismatch: expected 14, found 3
err_call_args.ax:2:5: error: return type mismatch: expected 14, found 3
err_call_args.ax:5:8: error: argument count mismatch: expected 2, got 1
